--- a/src/data/Agda.css
+++ b/src/data/Agda.css
@@ -48,7 +48,7 @@
                      background: #F5DEB3;
                    }
 
-/* Standard HTML attributes. */
+/* Standard attributes. */
 a:link { text-decoration: none;
        }
 a:visited { text-decoration: none;
