Added .UnsolvedConstraint to the CSS file.

--- a/src/data/Agda.css
+++ b/src/data/Agda.css
@@ -22,6 +22,7 @@
 /* OtherAspects. */
 .DottedPattern      {}
 .UnsolvedMeta       { color: black; background: yellow         }
+.UnsolvedConstraint { color: black; background: yellow         }
 .TerminationProblem { color: black; background: #FFA07A        }
 .IncompletePattern  { color: black; background: #F5DEB3        }
 .Error              { color: red;   text-decoration: underline }
